<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTipo"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/radGr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radIndividual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/radIndividual"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radEnPareja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/radEnPareja"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radGrupal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/radGrupal"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblDeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDeporte"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/sprDeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/lblInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="38dp" />
</LinearLayout>